--- a/html/settings.html
+++ b/html/settings.html
@@ -19,10 +19,10 @@
     </div>
     <div class="panel panel-content hidden" id="about">
         <p>AstroVenture is a fun and interactive educational game designed for Grade 9 
-            students to explore and learn about Space Science.  Pilot your own rocket ship 
+            students to explore and learn about Space Science. Pilot your own rocket ship 
             across a galaxy filled with stars, comets, planets, and galaxies. Along the way, 
             test your knowledge with space-related questions and earn points to unlock 
-            exciting rocket ship skins.  Learn topics like the solar system, stars and  
+            exciting rocket ship skins. Learn topics like the solar system, stars and  
             gravity—while flying through space and having fun. I, Jett Nova will assist
             you!</p>
     </div>
@@ -65,6 +65,10 @@
             	-A preview of the questions and the correct answers will be provided. <br>
 
         </p>
-
+       <div class="panel panel-header" id="Controls">Controls</div>
+       
+    <div class="panel panel-content">
+        <img src="" alt="">
+    </div>
 </body>
 </html>
