--- a/html/settings.html
+++ b/html/settings.html
@@ -65,10 +65,11 @@
             	-A preview of the questions and the correct answers will be provided. <br>
 
         </p>
+        </div>
        <div class="panel panel-header" id="Controls">Controls</div>
        
     <div class="panel panel-content">
-        <img src="" alt="">
+        <img src="../assets/WASD.png" alt="../assets/UDLR.png">
     </div>
 </body>
 </html>
