--- a/html/easy.html
+++ b/html/easy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/game.css">
+    <script type="text/java script" src="../javascript/quiz.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
     </div>
     <div class="jupiter">
         <figure>
-        <button>
+        <button type="button" onclick="popCorrect()">
             <img src="../assets/Jupiter.png" alt="a picture of Jupiter">
         <figcaption>Jupiter</figcaption>    
         </button>
