--- a/html/quiz.html
+++ b/html/quiz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/quiz.css">
+    <script src="../javascript/quiz.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
             <h2>Launch Mission</h2>
             <img src="../assets/Rocket.png" alt="Rocket Image">
         </button>
-        <button class="panel-quiz panel-quiz-right">
+        <button onclick="toSelectDifficulty()"  class="panel-quiz panel-quiz-right">
             <h2>Quiz Mode</h2>
             <img src="../assets/Jett Nova.png" alt="Jett Nova Image">
         </button>
