--- a/html/selectDifficulty.html
+++ b/html/selectDifficulty.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/quiz.css">
+    <script src="../javascript/quiz.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
      
     <div class="panel-quiz difficulty-tab">
         <h2>Quiz Mode</h2>
-        <button>Easy</button>
+        <button onclick="toEasyGame()">Easy</button>
         <button>Medium</button>
         <button>Hard</button>
         <button>Master</button>
